# NeuroBlock

./: .dockerignore  .gitattributes  .gitattributes   .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  FRONTEND_TESTING_GUIDE.md  README.md  SESSION_BASED_DATASETS.md  TESTING_SESSION_DATASETS.md  cloudbuild.yaml  debug-session-test.html  debug_model_scaling.py  deploy-gcp.sh  docker-compose.yml  feature-activations.md  fix_avgpool.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  run_backend.sh  run_tests.sh  test-dataset-creation.html  test_direct_prediction.py  test_prediction_endpoint.py  test_resnet.py  test_scaling.csv  test_scaling_direct.py  test_scaling_final.py  test_scaling_pipeline.py  test_session_datasets.sh  testing.py
.github/workflows/: ci.yml
backend/: DATASET_API.md  Dockerfile  Dockerfile.custom  __init__.py  config.py  dataset_loader.py  deploy-custom-domain.sh  main.py  run_tests.py  test-requirements.txt  test_dataset_endpoints.py  test_dataset_registry.py
backend/api/: dataset_routes.py  routes.py  sockets.py
backend/datasets/: __init__.py  breastcancer.py  california.py  cifar10.py  iris.py  mnist.py
backend/export/: __init__.py  notebook.py  pytorch.py  (+1 more)
docs/: BACKEND_README.md  DEPLOYMENT.md  GCP_DEPLOYMENT_GUIDE.md  IMPROVEMENTS.md  TESTING_SESSION_DATASETS.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  test-connections.html  test-socket.html
landing/: Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
(+124 files in other folders)
